Pass random seed directly

--- a/project/Project.ipynb
+++ b/project/Project.ipynb
@@ -6,12 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
     "import plotly\n",
     "import plotly.graph_objs as go\n",
     "import plotly.plotly as py\n",
-    "from sklearn import preprocessing, manifold, cluster"
+    "from sklearn import cluster, manifold, preprocessing"
    ]
   },
   {
@@ -20,9 +19,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Seed random number generator for consistent t-SNE visualizations\n",
-    "np.random.seed(2018)\n",
-    "\n",
     "# Set Plotly credentials (should probably use credentials file instead of hard-coding)\n",
     "plotly.tools.set_credentials_file(username='navravi', api_key='uYbUJOZ3VYmK0YILm3Gq')"
    ]
@@ -363,7 +359,7 @@
    "outputs": [],
    "source": [
     "# Embed data in 2 dimensions using t-SNE for visualization\n",
-    "tsne = manifold.TSNE()\n",
+    "tsne = manifold.TSNE(random_state=42)\n",
     "X_tsne = tsne.fit_transform(X)"
    ]
   },
@@ -374,7 +370,7 @@
    "outputs": [],
    "source": [
     "# Divide data into clusters based on Euclidean distance\n",
-    "kmeans = cluster.KMeans(2)\n",
+    "kmeans = cluster.KMeans(n_clusters=2, random_state=17)\n",
     "clusters = kmeans.fit_predict(X)"
    ]
   },
@@ -386,7 +382,9 @@
    "source": [
     "def make_label(row):\n",
     "    '''Create label for given row of data.'''\n",
-    "    return 'score: {}, crime: {}'.format(row['decile_score'], row['c_charge_desc'])"
+    "    return 'score: {}, crime: {}, race: {}'.format(row['decile_score'],\n",
+    "                                                   row['c_charge_desc'],\n",
+    "                                                   row['race'])"
    ]
   },
   {
